@@ -8,7 +8,7 @@ a,img{border:0; outline:none;}textarea:focus,input:focus{outline:0;}*:focus{outl
 
 img						{-webkit-filter:brightness(200%); filter:brightness(200%);}
 
-body,html 				{background:none; color:#444; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
+body,html 				{background:none; color:#444; width:100%; height:100%; margin:0; padding:0; font-family:Arial,Helvetica,sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
 html					{background-color:#000;}
 
 
@@ -32,7 +32,7 @@ strong, b, .bold		{font-weight:bold; color:inherit;}
 .portal					{-moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; display:table; width:100%; height:100%;}
 .main_wrap				{width:100%; min-width:1040px; padding:0px; display:table-cell; background-color:rgba(255,255,255,0.4);}
 #background_image	 	{width:100%; height:100%; position:fixed; top:0; left:0; z-index:-1; background-image:url('/art/mexico_background_image.jpg'); background-repeat:no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
-.overlay				{width:100%; height:100%; background-color:rgba(46, 41, 6, 0.6); position:relative;}	/* Overlay colour for background image */
+.overlay				{width:100%; height:100%; background-color:rgba(46,41,6,0.6); position:relative;}	/* Overlay colour for background image */
 iati-activity			{margin-bottom:40px;}	/* Fixes too-large bottom margin during only this instance */
 iati-activity:after 	{content:""; padding:0; display:initial;}	/* Takes away content since footer is included on site */
 .center_wrap			{width:960px; margin:0 auto; text-align:center;}
@@ -129,7 +129,7 @@ a.view_all_money:hover	{background-color:rgba(0,14,32,0.9); color:#FFF;}
 /*	Map styles (front page)
 	============================================= */
 .map_wrap				{width:100%; min-height:400px; max-height:400px; margin:0 auto; background-color:rgba(0,0,0,0.8); position:relative;}
-.map_info				{width:800px; margin:0 auto; top:0; left:-100px; right:-100px; padding:10px 40px; font-size:1.1em; color:#FFF; line-height:1.35em; position:absolute; background-color:rgba(52, 174, 255, 0.9); border-radius:0 0 8px 8px; text-align:center;}
+.map_info				{width:800px; margin:0 auto; top:0; left:-100px; right:-100px; padding:10px 40px; font-size:1.1em; color:#FFF; line-height:1.35em; position:absolute; background-color:rgba(52,174,255,0.9); border-radius:0 0 8px 8px; text-align:center;}
 .map_no_info			{color:#FFF; font-size:1.2em; line-height:1.35em; text-align:center; position:absolute; top:50%; left:20%; right:20%;}
 a.map_percent			{display:block; width:140px; margin:0 auto; bottom:30px; left:-80px; right:-780px; padding:10px 15px 15px 15px; font-size:0.95em; color:#FFF; line-height:1.15em; position:absolute; background-color:rgba(0,14,32,0.8); border-radius:8px; z-index:1; text-align:left;}
 a.map_percent:hover		{background-color:rgba(0,14,32,0.9);}
@@ -176,7 +176,7 @@ a.stats_link.missing span	{color:#008FFF;}
 /*	Data Description styles
 	============================================= */
 .description_wrap		{width:100%; margin:0 auto; background:linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 60%,rgba(0,0,0,1) 100%); background:-prefix-linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,1) 100%); padding-bottom:40px;}
-.description			{width:880px; margin:0 auto; padding:40px; text-align:left; margin-bottom:40px; background-color:rgba(255, 255, 255, 0.1);}
+.description			{width:880px; margin:0 auto; padding:40px; text-align:left; margin-bottom:40px; background-color:rgba(255,255,255,0.1);}
 .description span.title	{display:block; color:#FFF; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-top:1px solid #FFF; border-bottom:1px solid #FFF;}
 .description span.title.sub	{font-size:1.0em; border:0; margin:0; padding-bottom:10px; font-weight:bold;}
 .description p			{padding:15px 0; font-size:1.0em; color:#FFF; line-height:1.4em;}
@@ -202,8 +202,8 @@ a.read:hover			{text-decoration:underline;}
 .list_stats_num				{display:block; font-size:2.9em; color:#FFF; line-height:0.8em;}
 a.button					{padding:10px 20px; background-color:#33A4FC; font-size:1.25em; color:#FFF; border-radius:0 0 8px 8px; display:block; max-width:320px; margin:0 auto; text-align:center;}
 a.button:hover				{background-color:#008FFF;}
-a.csv_download				{display:block; margin-top:20px; padding:10px 20px; background-color:rgba(132, 191, 255, 0.24); text-align:center; color:#ccc;}
-a.csv_download:hover		{background-color:rgba(115, 182, 255, 0.49); color:#FFF;}
+a.csv_download				{display:block; margin-top:20px; padding:10px 20px; background-color:rgba(132,191,255,0.24); text-align:center; color:#ccc;}
+a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:#FFF;}
 	
 	
 /*	For url #view=donors & all #view=donor_*
@@ -327,41 +327,41 @@ table.list a:active		{color:#A8C5E5; text-decoration:none;}
 	============================================= */
 table.money					{width:100%; border-collapse:collapse; table-layout:fixed;}
 table.money td				{text-align:right; color:#B8C8CD; font-size:1.0em; line-height:1.45em; word-spacing:0.7px; padding:0px; vertical-align:top; border-bottom:1px solid #1E90FF; padding:15px 10px;}
-table.money td.col1			{text-align:left; background-color:rgba(74, 82, 54, 0.4);}
+table.money td.col1			{text-align:left; background-color:rgba(74,82,54,0.4);}
 table.money td.col2			{text-align:left;}
-table.money td.col3			{background-color:rgba(17, 46, 105, 0.2);}
-table.money td.col4			{background-color:rgba(17, 46, 105, 0.4);}
-table.money td.col5			{background-color:rgba(17, 46, 105, 0.6);}
-table.money td.col6			{background-color:rgba(17, 101, 105, 0.4);}
-table.money td.col7			{background-color:rgba(17, 101, 105, 0.6);}
+table.money td.col3			{background-color:rgba(17,46,105,0.2);}
+table.money td.col4			{background-color:rgba(17,46,105,0.4);}
+table.money td.col5			{background-color:rgba(17,46,105,0.6);}
+table.money td.col6			{background-color:rgba(17,101,105,0.4);}
+table.money td.col7			{background-color:rgba(17,101,105,0.6);}
 
 table.money tr.row1 th		{background-color:transparent; color:#FFF; font-weight:700; text-align:center; padding:0px; position:relative;}
 table.money tr.row1 th:hover{cursor:pointer;}
 table.money tr.row1 th span	{color:#FFF; display:block; padding:20px 10px;}
-table.money tr.row1 th.col1	{background-color:rgba(74, 82, 54, 0.9); padding:20px 10px; text-align:left; border:1px solid rgba(74, 87, 43, 1); border-bottom:1px solid #1E90FF;}
-table.money tr.row1 th.col2	{text-align:left; border-bottom:1px solid #1E90FF; padding:20px 15px; border-top:1px solid rgba(0, 50, 151, 1);}
-table.money tr.row1 th.col3	{background-color:rgba(17, 46, 105, 0.9); border:1px solid rgba(0, 50, 151, 1); border-bottom:1px solid #1E90FF;}
-table.money tr.row1 th.col4	{background-color:rgba(17, 101, 105, 0.9); border:1px solid rgba(7, 117, 122, 1); border-bottom:1px solid #1E90FF;}
+table.money tr.row1 th.col1	{background-color:rgba(74,82,54,0.9); padding:20px 10px; text-align:left; border:1px solid rgba(74,87,43,1); border-bottom:1px solid #1E90FF;}
+table.money tr.row1 th.col2	{text-align:left; border-bottom:1px solid #1E90FF; padding:20px 15px; border-top:1px solid rgba(0,50,151,1);}
+table.money tr.row1 th.col3	{background-color:rgba(17,46,105,0.9); border:1px solid rgba(0,50,151,1); border-bottom:1px solid #1E90FF;}
+table.money tr.row1 th.col4	{background-color:rgba(17,101,105,0.9); border:1px solid rgba(7,117,122,1); border-bottom:1px solid #1E90FF;}
 
 table.money tr.row2 td		{color:#FFF; font-weight:500; padding:20px 10px;}
-table.money tr.row2 td.col1 {background-color:rgba(74, 82, 54, 0.9); border-left:1px solid rgba(74, 87, 43, 1); border-right:1px solid rgba(74, 87, 43, 1);}
-table.money tr.row2 td.col3	{background-color:rgba(17, 46, 105, 0.6); border-left:1px solid rgba(0, 50, 151, 1);}
-table.money tr.row2 td.col4	{background-color:rgba(17, 46, 105, 0.8);}
-table.money tr.row2 td.col5	{background-color:rgba(17, 46, 105, 0.9); border-right:1px solid rgba(0, 50, 151, 1);}
-table.money tr.row2 td.col6	{background-color:rgba(17, 101, 105, 0.7);}
-table.money tr.row2 td.col7	{background-color:rgba(17, 101, 105, 0.9); border-right:1px solid rgba(7, 117, 122, 1);}
+table.money tr.row2 td.col1 {background-color:rgba(74,82,54,0.9); border-left:1px solid rgba(74,87,43,1); border-right:1px solid rgba(74,87,43,1);}
+table.money tr.row2 td.col3	{background-color:rgba(17,46,105,0.6); border-left:1px solid rgba(0,50,151,1);}
+table.money tr.row2 td.col4	{background-color:rgba(17,46,105,0.8);}
+table.money tr.row2 td.col5	{background-color:rgba(17,46,105,0.9); border-right:1px solid rgba(0,50,151,1);}
+table.money tr.row2 td.col6	{background-color:rgba(17,101,105,0.7);}
+table.money tr.row2 td.col7	{background-color:rgba(17,101,105,0.9); border-right:1px solid rgba(7,117,122,1);}
 table.money tr.row2 td.col2	{padding:20px 15px;}
 
-table.money tr.rows td.col1	{border-left:1px solid rgba(74, 87, 43, 1); border-right:1px solid rgba(74, 87, 43, 1);}
-table.money tr.rows td.col3	{border-left:1px solid rgba(0, 50, 151, 1);}
-table.money tr.rows td.col5	{border-right:1px solid rgba(0, 50, 151, 1);}
-table.money tr.rows td.col7	{border-right:1px solid rgba(7, 117, 122, 1);}
+table.money tr.rows td.col1	{border-left:1px solid rgba(74,87,43,1); border-right:1px solid rgba(74,87,43,1);}
+table.money tr.rows td.col3	{border-left:1px solid rgba(0,50,151,1);}
+table.money tr.rows td.col5	{border-right:1px solid rgba(0,50,151,1);}
+table.money tr.rows td.col7	{border-right:1px solid rgba(7,117,122,1);}
 
 table.money td.col1:hover	{cursor:default;}
 table.money tr.row2 td.col1:hover	{cursor:pointer;}
 table.money tr.rows td.col2:hover, table.money tr.rows td.col3:hover, 
-table.money tr.rows td.col4:hover, table.money tr.rows td.col5:hover	{background-color:rgba(17, 46, 105, 1);}
-table.money tr.rows td.col6:hover	{background-color:rgba(17, 101, 105, 1);}
+table.money tr.rows td.col4:hover, table.money tr.rows td.col5:hover	{background-color:rgba(17,46,105,1);}
+table.money tr.rows td.col6:hover	{background-color:rgba(17,101,105,1);}
 table.money tr.rows td.col7:hover	{cursor:initial; color:#B8C8CD;}
 
 table.money a				{display:block; color:#A8C5E5; word-wrap:normal;}
@@ -376,8 +376,8 @@ table.money a.year.prev		{left:0;}
 table.money a.year.next		{right:0;}
 
 table.money.publishers th.col2,
-table.money.publishers td.col2	{border-left:1px solid rgba(0, 50, 151, 1);}
-table.money.publishers th.col2	{border-top:1px solid rgba(0, 50, 151, 1);}
+table.money.publishers td.col2	{border-left:1px solid rgba(0,50,151,1);}
+table.money.publishers th.col2	{border-top:1px solid rgba(0,50,151,1);}
 
 
 /*	Table for Activities list (Donors / Sectors)
@@ -417,13 +417,13 @@ table.data td			{color:#FFF; font-size:1.0em; line-height:1.4em; padding:10px 20
 /*	Data Investigators alert
 	============================================= */
 .data_wrap				{position:absolute; bottom:0; width:100%; margin:0 auto;}
-a.data_invest			{display:block; width:100%; margin:0 auto; padding:10px 0; line-height:1.5em; font-size:0.9em; color:#C7A1D6; text-align:center; background-color:rgba(194, 0, 255, 0.4);}
-a.data_invest:hover		{color:#FFF; background-color:rgba(194, 0, 255, 0.8);}
+a.data_invest			{display:block; width:100%; margin:0 auto; padding:10px 0; line-height:1.5em; font-size:0.9em; color:#C7A1D6; text-align:center; background-color:rgba(194,0,255,0.4);}
+a.data_invest:hover		{color:#FFF; background-color:rgba(194,0,255,0.8);}
 
 
 /*	Footer
 	============================================= */
-.footer_wrap			{display:table-footer-group; height:1px; background-color:rgba(0, 0, 0, 0.95);}
+.footer_wrap			{display:table-footer-group; height:1px; background-color:rgba(0,0,0,0.95);}
 .footer					{width:960px; margin:0 auto; padding:10px 0;}
 .footer_link			{width:320px; display:inline-block; vertical-align:top;}
 .footer_link a			{font-size:0.8em; line-height:1.5em; color:#CCC;}
