@@ -238,7 +238,8 @@ table.money tr.rows td.col7	{border-right:1px solid rgba(82,82,82,1);}
 
 table.money tr.rows td.col2:hover, table.money tr.rows td.col3:hover, 
 table.money tr.rows td.col4:hover, table.money tr.rows td.col5:hover	{background-color:rgba(206,131,0,0.6);}
-table.money tr.rows td.col6:hover, table.money tr.rows td.col7:hover	{background-color:rgba(206,131,0,0.6);}
+table.money tr.rows td.col6:hover	{background-color:rgba(206,131,0,0.6);}
+table.money tr.rows td.col7:hover	{cursor:initial; color:rgba(198,198,198,1);}
 
 table.money a				{color:rgba(204,204,204,1);}
 table.money a:focus			{color:rgba(204,204,204,1);}
