@@ -3,6 +3,7 @@ Development Portal (2015-11-12 shi)
 Added Result subheader to SAVi
 Update CSS for themes and rgba
 Plural for Results, Budgets and Transactions
+Fixed hover CSS org budget column for rgba
 
 
 Development Portal (2015-11-10 shi)
